Navbar is not showing good in pc issue number  #310 is solved

--- a/style.css
+++ b/style.css
@@ -324,8 +324,8 @@ body {
   display: inline-block;
   color: white;
   transition: transform 0.3s ease, background-color 0.3s ease, color 0.3s ease; /* Smooth transition */
-}
-*/
+
+
 
 /*
 .service .box a:hover {
@@ -1077,4 +1077,16 @@ padding-left:2px;
   cursor: pointer;
   margin-top: 5px;
   width: 60%;
+}
+
+.nav-logo{
+  margin-left: 30px;
+  margin-right: 350px;
+}
+
+@media (max-width: 768px) {
+  .nav-logo{
+    margin-left: 0px;
+    margin-right: 0px;
+  }
 }
